fix z-index of shown modal

--- a/src/stylesheets/Modal.css
+++ b/src/stylesheets/Modal.css
@@ -29,6 +29,7 @@
 
 .show-modal {
     opacity: 1.0;
+    z-index: 100;
     -webkit-transform: translateY(-30px);
     -moz-transform: translateY(-30px);
     -ms-transform: translateY(-30px);
